demos/deploy/cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intel-rh-demo
  labels:
    app.kubernetes.io/part-of: intel-rh-ai-platform
